Closed Bug 1696869 Opened 4 years ago Closed 4 years ago

[Linux] Dmabuf surface creation fails on AMD radeon

Categories

(Core :: Widget: Gtk, defect, P3)

defect

Tracking

()

RESOLVED FIXED
88 Branch
Tracking Status
firefox88 --- fixed

People

(Reporter: stransky, Assigned: stransky)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

Right now we fail to create dmabuf surface on AMD Radeon, for both WebGL and video playback.

bug 1693065 comment 7 might be relevant here.

  • Don't use GBM_BO_USE_TEXTURING|GBM_BO_USE_SCANOUT when dmabuf object is created without modificators.
  • Sync dmabuf objects on map/unmap.
Pushed by stransky@redhat.com: https://hg.mozilla.org/integration/autoland/rev/59d0663e2bc5 [Linux] Don't use GBM_BO_USE_TEXTURING and GBM_BO_USE_SCANOUT dmabuf flags, r=jhorak
Status: NEW → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 88 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: