Bug 1696869 [Linux] Don't use GBM_BO_USE_TEXTURING and GBM_BO_USE_SCANOUT dmabuf flags, r=jhorak

- Don't use GBM_BO_USE_TEXTURING|GBM_BO_USE_SCANOUT when dmabuf object is created without modificators.
- Sync dmabuf objects on map/unmap.

Differential Revision: https://phabricator.services.mozilla.com/D107531